--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,25 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>To-do List</title>
 </head>
-<!-- <style>
-    li {
-        list-style-type: none;
-    }
-</style> -->
-<body>
-    <h1><%= kindOfDay %></h1>
-    <ul>
-        <% newListItem.map(newItem => { %>
-            <li> <%=newItem%> </li>
-       <% }) %>
-    </ul>
 
-    <form action="/" method="post">
-        <input type="text" name="newItem" placeholder="To-do">
-        <button type="submit" name="button">Add To-do</button>
-    </form>
+<body>
+    <div class="box" id="heading">
+        <h1><%= kindOfDay %></h1>
+    </div>
+    
+    <div class="box">
+        
+            <% newListItem.map(newItem => { %>
+                <div class="item">
+                    <input type="checkbox">
+                    <p> <%=newItem%> </p>
+                </div> 
+           <% }) %>
+
+           <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit" name="button">+</button>
+        </form>
+    </div>
 
 </body>
 </html>
