--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,10 +6,12 @@
     <div class="box">
         
             <% newListItem.forEach(function(newItem) { %>
+            <form action="/delete" method="post">
                 <div class="item">
-                    <input type="checkbox">
+                    <input type="checkbox" name="checkbox" value="<%=newItem._id%>" onChange="this.form.submit()">
                     <p> <%=newItem.name%> </p>
                 </div> 
+            </form>
            <% }) %>
 
            <form class="item" action="/" method="post">
